--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,10 @@
   },
   "description": "A simple package that generates fake typical Nigerian data.",
   "require-dev": {
-    "phpunit/phpunit": "^10.4@dev",
-    "illuminate/support": "^11.0@dev"
+    "phpunit/phpunit": "^8.4|^10.0",
+    "illuminate/support": "^11.0@dev",
+    "pestphp/pest": "2.x-dev",
+    "pestphp/pest-plugin-drift": "2.x-dev"
   },
   "autoload-dev": {
     "psr-4": {
@@ -44,6 +46,17 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit"
-  }
+    "test": "vendor/bin/pest"
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/kodegrenade/naija-faker-laravel"
+    }
+  ]
 }
