chore: composer.json file

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
       }
     }
   },
-  "description": "A simple package that generates fake typical Nigerian data.",
+  "description": "A Laravel faker library to generate typical Nigeria fake data ranging from name, address, phone number, LGAs and states for you. It supports Yoruba, Igbo, and Hausa ethnic groups with culturally authentic data.",
   "require-dev": {
     "phpunit/phpunit": "^8.4|^10.0",
     "illuminate/support": "^11.0@dev",
